[carenet] sync with upstream

--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2910jigyoushaboshu.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2910jigyoushaboshu.html
@@ -240,7 +240,7 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年10月10日</dd></dl><p>平成29年度第2回介護保険施設等・平成29年度認知症高齢者グループホーム整備事業者募集及び平成29年度特定施設入居者生活介護の指定を受ける有料老人ホーム又はサービス付き高齢者向け住宅事業者募集を次の通り実施します。</p>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年12月5日</dd></dl><p>平成29年度第2回介護保険施設等・平成29年度認知症高齢者グループホーム整備事業者募集及び平成29年度特定施設入居者生活介護の指定を受ける有料老人ホーム又はサービス付き高齢者向け住宅事業者募集を次の通り実施します。<br />（募集の受付期間は終了しました。）</p>
     <h2 id="midashi52582">１．介護保険施設等・認知症高齢者グループホーム</h2>
     <h3 id="midashi69601">募集要項はこちら</h3><ul class="link-list">
 
@@ -412,4 +412,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/10/06 08:57:10.649 GMT+9 -->
+<!-- Created: 2017/12/22 08:44:55.965 GMT+9 -->
