--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2912jigyoushaboshu.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2912jigyoushaboshu.html
@@ -14,8 +14,8 @@
 <meta name="format-detection" content="telephone=no" />
 
 <meta name="robots" content="ALL" /><meta name="keywords"
-    content="神戸市,自治体,行政,介護保険,ケアネット,施設,一覧,介護" />
-<meta name="description" content="神戸市自治体サイト" /><script type="text/javascript" src="/js/common.js"></script> 
+    content="29年度　介護保険　事業者募集　老健　第2回　再募集" />
+<script type="text/javascript" src="/js/common.js"></script> 
 
 <!-- 音声関連 ここから --> 
 <!-- みんなのとーくん --> 
@@ -37,12 +37,13 @@
   ga('send', 'pageview');
 
 </script>
-<title>神戸市：神戸市内の介護サービス施設一覧 </title>
-<meta property="og:title" content="神戸市：神戸市内の介護サービス施設一覧" />
+<title>神戸市：平成29年度第2回介護保険施設等整備事業者募集（再募集）について </title>
+<meta property="og:title"
+      content="神戸市：平成29年度第2回介護保険施設等整備事業者募集（再募集）について" />
 <meta property="og:type" content="article" />
-<meta property="og:description" content="神戸市自治体サイト" />
+
 <meta property="og:url"
-      content="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/index.html" />
+      content="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/2912jigyoushaboshu.html" />
 <meta property="og:image" content="http://www.city.kobe.lg.jp/img/sns.gif" />
 <meta property="og:site_name" content="神戸市ホームページ" />
 <meta property="og:locale" content="ja_JP" />
@@ -218,113 +219,57 @@
 <p id="breadcrumbsList"><img src="/img/present_location.gif" alt="現在位置" /><a href="/index.html">トップページ</a> ＞ <a href="/index_menu.html">総合メニュー</a> ＞ <a
     href="/life/index.html">くらし・手続き</a> ＞ <a
     href="/life/support/index.html">年金・保険・税</a> ＞ <a
-    href="/life/support/carenet/index.html">介護保険</a> ＞ 神戸市内の介護サービス施設一覧</p><hr />
+    href="/life/support/carenet/index.html">介護保険</a> ＞ <a
+    href="/life/support/carenet/shisetsu/index.html">神戸市内の介護サービス施設一覧</a> ＞ 平成29年度第2回介護保険施設等整備事業者（再募集）について</p><hr />
 <div id="container">
 <div id="contents">
 
-    <h1 id="midashitop">神戸市内の介護サービス施設一覧</h1>
+    <h1 id="midashitop">平成29年度第2回介護保険施設等整備事業者募集（再募集）について</h1>
     <div class="btnSocialBox">
             <div class="btnSocialInnerBox">
               <span>
                   <a href="https://twitter.com/share"
                      class="twitter-share-button"
-                     data-url="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/index.html"
-                     data-text="神戸市：神戸市内の介護サービス施設一覧"
+                     data-url="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/2912jigyoushaboshu.html"
+                     data-text="神戸市：平成29年度第2回介護保険施設等整備事業者募集（再募集）について"
                      data-lang="ja">ツイート</a>
                   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </span>
               <div class="fb-share-button"
-                   href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/index.html"
+                   href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/2912jigyoushaboshu.html"
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2018年1月1日</dd></dl>
-    <ul class="link-list">
-
-            <li>
-              <a href="/life/support/carenet/shisetsu/yuuryo.html">有料老人ホーム一覧</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/carehouse.html">ケアハウス一覧</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/shokibo.html">小規模多機能型居宅介護拠点一覧</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/teikijunkai.html">定期巡回・随時対応型訪問介護看護サービス一覧</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/hukugougata.html">看護小規模多機能型居宅介護一覧</a>
-              </li>
-            <li class="doc-other">
-              <a href="http://www.satsuki-jutaku.jp/"
-                 rel="external">サービス付高齢者向け住宅　情報提供システム（外部リンク）</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/gh.html">認知症高齢者グループホーム一覧</a>
-              </li>
-    </ul>
-    <ul class="link-list">
-
-            <li>
-              <a href="/life/support/carenet/shisetsu/tokuyo.html">介護老人福祉施設（特別養護老人ホーム）一覧</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/rouken.html">介護老人保健施設（老人保健施設）一覧</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/ryoyobyosho.html">介護療養型医療施設（療養病床）一覧</a>
-              </li>
-    </ul>
-    <ul class="link-list">
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年12月27日</dd></dl><p>平成29年度第2回介護保険施設等整備事業者募集（再募集）を次の通り実施します。</p>
+    <h2 id="midashi61632">平成29年度第2回介護保険施設等整備事業者募集（再募集）</h2>
+    <h3 id="midashi69601">募集要項はこちら</h3><ul class="link-list">
 
             <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/kenikibetu.pdf">日常生活圏域別　事業所一覧（PDF形式：353KB）</a>
-              </li>
-    </ul>
-    <h2 id="midashi64425">整備中・整備予定</h2><ul class="link-list">
-
-            <li>
-              <a href="/life/support/carenet/shisetsu/seibi.html">神戸市内で整備中または整備予定の介護サービス施設</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/jigyoshaboshu.html">介護保険施設等の整備事業者募集について</a>
-              </li>
-    </ul>
-    <h2 id="midashi36933">選考結果</h2><ul class="link-list">
-
-            <li>
-              <a href="/life/support/carenet/shisetsu/jigyoshaboshu.html#midashi36933">過去に実施した介護保険施設等の整備事業者募集の選考結果はこちら</a>
-              </li>
-    </ul>
-    <h2 id="midashi66140">各種施設の食費・居住費</h2><p>介護保険施設の食費・居住費(利用者負担額)は、国のガイドラインに従い、各施設ごとのサービス内容や設備の違いなどを反映して設定されています。</p><ul class="link-list">
-
-            <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/tokuyo.pdf">介護老人福祉施設（特別養護老人ホーム）（PDF形式：186KB）</a>
+              <a href="/life/support/carenet/shisetsu/01_H29_3_youkou_main.pdf">平成29年度第2回介護保険施設等整備事業者募集要項（再募集）（本編）（PDF形式：381KB）</a>
               </li>
             <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/roken.pdf">介護老人保健施設（老人保健施設）（PDF形式：140KB）</a>
-              </li>
-            <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/ryoyo.pdf">介護療養型医療施設（療養病床）（PDF形式：86KB）</a>
-              </li>
-            <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/short.pdf">上記の施設以外で短期入所生活介護（ショートステイ）を実施している施設（PDF形式：79KB）</a>
-              </li>
-    </ul><p>低所得者層については、利用者負担の上限が定められています。詳細は、「神戸市の介護保険のあらまし」P38～39(「4.食費・居住費の軽減」)をご覧ください。</p><ul class="link-list">
-
-            <li>
-              神戸市の介護保険のあらまし
+              <a href="/life/support/carenet/shisetsu/02_H29_3_youkou_data.pdf">平成29年度第2回介護保険施設等整備事業者募集要項（再募集）（資料編）（PDF形式：674KB）</a>
               </li>
     </ul>
-<div class="relatedLinks">
-    <h2><img src="/img/related_links_title.gif" alt="関連リンク" /></h2>
-        <ul>
-            <li class="doc-other"><a
-    href="http://www.kobe-roushiren.jp/?page_id=80"
-    rel="external">神戸市老人福祉施設連盟の「ショートステイ空き状況」のページ（外部リンク）</a></li>
-        </ul>
-</div>
+    <h3 id="midashi8155">様式はこちら</h3><ul class="link-list">
+
+            <li class="doc-xls">
+              <a href="/life/support/carenet/shisetsu/03_H29_3_format.xls">表紙・添付書類（Excel形式：400KB）</a>
+              </li>
+            <li class="doc-doc">
+              <a href="/life/support/carenet/shisetsu/04_H29_3_format_prospectus.docx">添付書類（趣意書）（Word形式：27KB）</a>
+              </li>
+            <li>
+              ※添付書類のチェックリストは募集要項（資料編）に含まれています。
+              </li>
+            <li>
+              ※応募の際は、趣意書も忘れずに提出してください。
+              </li>
+    </ul>
+    <h2 id="midashi82121">その他</h2>
+<ul><li>既存特別養護老人ホームにおける協議による増床を受け付けています。詳細については、こちらをご覧ください。</li><lo><a href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/tokuyou_kyougizoushou.html">既存特別養護老人ホームにおける協議増床制度について </a></lo></ul>
+  
+
 <div class="getPdf">
 <p>一部のファイルをPDF形式で提供しています。PDFの閲覧にはAdobe System社の無償のソフトウェア「Adobe Reader」または「Adobe Acrobat Reader」 が必要です。下記のAdobe Readerダウンロードページなどから入手してください。</p>
 <ul class="link-list">
@@ -344,7 +289,8 @@
             <li><a href="/life/support/carenet/ansuko-center/index.html">あんしんすこやかセンター</a></li>
             <li><a href="/life/support/carenet/egao/index.html">えがおの窓口</a></li>
             <li><a href="/life/support/carenet/pamphlet/index.html">パンフレット</a></li>
-            <li class="present">神戸市内の介護サービス施設一覧</li>
+            <li class="present2"><a
+    href="/life/support/carenet/shisetsu/index.html">神戸市内の介護サービス施設一覧</a></li>
             <li><a href="/life/support/carenet/kaigoyobou_panda/index.html">介護予防ぱんだの部屋</a></li>
             <li><a href="/life/support/carenet/koureishagyakutai_boushi/index.html">高齢者虐待防止</a></li>
             <li><a href="/life/support/carenet/koureisha_chiikimimamori/index.html">高齢者の地域見守り</a></li>
@@ -385,14 +331,14 @@
 
 <dl>
 <dt>
-    神戸市 保健福祉局 高齢福祉部 介護保険課</dt>
+    神戸市 保健福祉局 高齢福祉部 高齢福祉課 施設整備係</dt>
 <dd><address>
   〒650-8570 神戸市中央区加納町6-5-1 神戸市役所1号館4階
   <a href="https://goo.gl/maps/1AyoBsqAev92">市役所への道順・地図</a>
   <br />
-  電話：078-322-6228  Fax：078-322-6049
+  電話：078-322-5226  Fax：078-322-6046
   <span class="contactLink" id="contactLink">
-    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRIcFhlcHxLcE54cFtUcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHlQcEg5cGN1cVclcE53cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWc%3D&lang=ja&ssi_code=K1015400350000-0000&title=">このページの内容についてメールで問い合わせする</a></span>
+    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRqcFhscHNecFs2cFROcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHlrcEhxcGh1cVcocGd3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=">このページの内容についてメールで問い合わせする</a></span>
 <script type="text/javascript">
 var elContainer = document.getElementById("contactLink"); 
  while(elContainer.firstChild) { 
@@ -400,7 +346,7 @@ var elContainer = document.getElementById("contactLink");
  } 
 text = document.createTextNode('このページの内容についてメールで問い合わせする'); 
 elA = document.createElement('a'); 
-elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRIcFhlcHxLcE54cFtUcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHlQcEg5cGN1cVclcE53cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWc%3D&lang=ja&ssi_code=K1015400350000-0000&title=' + document.title; 
+elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRqcFhscHNecFs2cFROcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHlrcEhxcGh1cVcocGd3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=' + document.title; 
 elA.appendChild(text); 
 document.getElementById('contactLink').appendChild(elA); 
 </script>
@@ -421,9 +367,9 @@ document.getElementById('contactLink').appendChild(elA);
 <div id="copyright">Copyright <abbr title="Copyright">&copy;</abbr> City of Kobe. All rights reserved.</div>
 
 </div><!-- /footer -->
-<!-- Created: 2017/11/07 15:55:43.178 GMT+9 -->
+<!-- Created: 2017/11/07 15:55:42.774 GMT+9 -->
 
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/12/25 16:19:27.517 GMT+9 -->
+<!-- Created: 2017/12/27 10:38:22.207 GMT+9 -->
