--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html
@@ -239,8 +239,18 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年10月10日</dd></dl><p>介護保険施設等の整備事業者募集について、募集要項へのリンク等を掲載しています。</p>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年12月27日</dd></dl><p>介護保険施設等の整備事業者募集について、募集要項へのリンク等を掲載しています。</p>
     <h2 id="midashi61731">現在実施中の募集について</h2><ul class="link-list">
+
+            <li>
+              <a href="/life/support/carenet/shisetsu/2912jigyoushaboshu.html">平成29年度第2回介護保険施設等整備事業者募集（再募集）について</a>
+              </li>
+            <li>
+              <a href="/life/support/carenet/shisetsu/tokuyou_kyougizoushou.html">既存特別養護老人ホームにおける協議増床制度について</a>
+              </li>
+    </ul>
+    <h2 id="midashi73633">今後実施予定の募集について</h2><p>実施予定が決まり次第掲載いたします。</p>
+    <h2 id="midashi89101">受付（または申込）を終了した募集について（参考）</h2><p>※既に受付（または申込）を終了した募集について、参考として掲載しています。</p><ul class="link-list">
 
             <li>
               <a href="/life/support/carenet/shisetsu/2910jigyoushaboshu.html">平成29年度第2回介護保険施設等整備事業者募集について</a>
@@ -251,13 +261,6 @@
             <li>
               <a href="/life/support/carenet/shisetsu/2910jigyoushaboshu.html">平成29年度特定施設入居者生活介護の指定をうける有料老人ホーム又はサービス付き高齢者向け住宅事業者募集について</a>
               </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/tokuyou_kyougizoushou.html">既存特別養護老人ホームにおける協議増床制度について</a>
-              </li>
-    </ul>
-    <h2 id="midashi73633">今後実施予定の募集について</h2><p>実施予定が決まり次第掲載いたします。</p>
-    <h2 id="midashi89101">受付（または申込）を終了した募集について（参考）</h2><p>※既に受付（または申込）を終了した募集について、参考として掲載しています。</p><ul class="link-list">
-
             <li>
               <a href="/life/support/carenet/shisetsu/2904jigyoushaboshu.html">平成29年度第1回介護保険施設等整備事業者募集について</a>
               </li>
@@ -407,4 +410,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/10/05 13:24:00.250 GMT+9 -->
+<!-- Created: 2017/12/27 18:27:52.207 GMT+9 -->
