--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html
@@ -239,12 +239,9 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年12月27日</dd></dl><p>介護保険施設等の整備事業者募集について、募集要項へのリンク等を掲載しています。</p>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2018年1月23日</dd></dl><p>介護保険施設等の整備事業者募集について、募集要項へのリンク等を掲載しています。</p>
     <h2 id="midashi61731">現在実施中の募集について</h2><ul class="link-list">
 
-            <li>
-              <a href="/life/support/carenet/shisetsu/2912jigyoushaboshu.html">平成29年度第2回介護保険施設等整備事業者募集（再募集）について</a>
-              </li>
             <li>
               <a href="/life/support/carenet/shisetsu/tokuyou_kyougizoushou.html">既存特別養護老人ホームにおける協議増床制度について</a>
               </li>
@@ -252,6 +249,9 @@
     <h2 id="midashi73633">今後実施予定の募集について</h2><p>実施予定が決まり次第掲載いたします。</p>
     <h2 id="midashi89101">受付（または申込）を終了した募集について（参考）</h2><p>※既に受付（または申込）を終了した募集について、参考として掲載しています。</p><ul class="link-list">
 
+            <li>
+              <a href="/life/support/carenet/shisetsu/2912jigyoushaboshu.html">平成29年度第2回介護保険施設等整備事業者募集（再募集）について</a>
+              </li>
             <li>
               <a href="/life/support/carenet/shisetsu/2910jigyoushaboshu.html">平成29年度第2回介護保険施設等整備事業者募集について</a>
               </li>
@@ -332,6 +332,7 @@
             <li><a href="/life/support/carenet/kaigoyobou_panda/index.html">介護予防ぱんだの部屋</a></li>
             <li><a href="/life/support/carenet/koureishagyakutai_boushi/index.html">高齢者虐待防止</a></li>
             <li><a href="/life/support/carenet/koureisha_chiikimimamori/index.html">高齢者の地域見守り</a></li>
+            <li><a href="/life/support/carenet/jinzai/index.html">介護人材関連情報</a></li>
             <li><a href="/life/support/carenet/other/index.html">その他のお役立ち情報</a></li>
             <li><a href="/life/support/carenet/nintei_guide/index.html">要介護・要支援 認定申請ガイド</a></li>
             <li><a href="/life/support/carenet/caremanagement/index.html">介護予防ケアマネジメントガイド</a></li>
@@ -410,4 +411,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/12/27 18:27:52.207 GMT+9 -->
+<!-- Created: 2018/02/01 14:23:51.750 GMT+9 -->
