--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/unitcare.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/unitcare.html
@@ -13,8 +13,9 @@
 
 <meta name="format-detection" content="telephone=no" />
 
-<meta name="robots" content="ALL" />
-<script type="text/javascript" src="/js/common.js"></script> 
+<meta name="robots" content="ALL" /><meta name="keywords"
+    content="神戸市　特養　老健　ユニットケア　研修" />
+<meta name="description" content="神戸市　特養　老健　ユニットケア　研修" /><script type="text/javascript" src="/js/common.js"></script> 
 
 <!-- 音声関連 ここから --> 
 <!-- みんなのとーくん --> 
@@ -36,13 +37,13 @@
   ga('send', 'pageview');
 
 </script>
-<title>神戸市：平成26年度介護保険施設等の整備事業者の選考結果について </title>
-<meta property="og:title"
-      content="神戸市：平成26年度介護保険施設等の整備事業者の選考結果について" />
+<title>神戸市：ユニットケア研修について </title>
+<meta property="og:title" content="神戸市：ユニットケア研修について" />
 <meta property="og:type" content="article" />
-
+<meta property="og:description"
+      content="神戸市　特養　老健　ユニットケア　研修" />
 <meta property="og:url"
-      content="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/26kaigohoken_senkoukekka.html" />
+      content="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/unitcare.html" />
 <meta property="og:image" content="http://www.city.kobe.lg.jp/img/sns.gif" />
 <meta property="og:site_name" content="神戸市ホームページ" />
 <meta property="og:locale" content="ja_JP" />
@@ -219,38 +220,57 @@
     href="/life/index.html">くらし・手続き</a> ＞ <a
     href="/life/support/index.html">年金・保険・税</a> ＞ <a
     href="/life/support/carenet/index.html">介護保険</a> ＞ <a
-    href="/life/support/carenet/shisetsu/index.html">神戸市内の介護サービス施設一覧</a> ＞ 平成26年度介護保険施設等の整備事業者の選考結果について</p><hr />
+    href="/life/support/carenet/shisetsu/index.html">神戸市内の介護サービス施設一覧</a> ＞ ユニットケア研修について</p><hr />
 <div id="container">
 <div id="contents">
 
-    <h1 id="midashitop">平成26年度介護保険施設等の整備事業者の選考結果について</h1>
+    <h1 id="midashitop">ユニットケア研修について</h1>
     <div class="btnSocialBox">
             <div class="btnSocialInnerBox">
               <span>
                   <a href="https://twitter.com/share"
                      class="twitter-share-button"
-                     data-url="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/26kaigohoken_senkoukekka.html"
-                     data-text="神戸市：平成26年度介護保険施設等の整備事業者の選考結果について"
+                     data-url="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/unitcare.html"
+                     data-text="神戸市：ユニットケア研修について"
                      data-lang="ja">ツイート</a>
                   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </span>
               <div class="fb-share-button"
-                   href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/26kaigohoken_senkoukekka.html"
+                   href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/unitcare.html"
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2014年4月1日</dd></dl>
-    <h2 id="midashi75581">採択事業者</h2><p>次に揚げる事業者が採択されました。</p>
-    <h4 id="midashi41014">1.特別養護老人ホーム</h4>
-<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" width="100%" x:str=""><colgroup><col style="width: 134pt; mso-width-source: userset; mso-width-alt: 5696" width="178" /><col style="width: 161pt; mso-width-source: userset; mso-width-alt: 6848" width="214" /><col span="2" style="width: 45pt; mso-width-source: userset; mso-width-alt: 1920" width="60" /></colgroup><tbody><tr height="19" style="height: 14.25pt"><td class="xl24" height="19" style="border-bottom: windowtext 0.5pt solid; border-left: windowtext 0.5pt solid; background-color: transparent; width: 134pt; height: 14.25pt; border-top: windowtext 0.5pt solid; border-right: windowtext 0.5pt solid" width="178">事業者</td><td class="xl24" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; width: 161pt; border-left-color: windowtext; border-top: windowtext 0.5pt solid; border-right: windowtext 0.5pt solid" width="214">整備場所</td><td class="xl24" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; width: 45pt; border-left-color: windowtext; border-top: windowtext 0.5pt solid; border-right: windowtext 0.5pt solid" width="60">入所定員</td><td class="xl24" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; width: 45pt; border-left-color: windowtext; border-top: windowtext 0.5pt solid; border-right: windowtext 0.5pt solid" width="60">整備区分</td></tr><tr height="19" style="height: 14.25pt"><td class="xl25" height="19" style="border-bottom: windowtext 0.5pt solid; border-left: windowtext 0.5pt solid; background-color: transparent; border-top-color: windowtext; height: 14.25pt; border-right: windowtext 0.5pt solid">社会福祉法人駒どり</td><td class="xl25" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; border-top-color: windowtext; border-left-color: windowtext; border-right: windowtext 0.5pt solid">北区西大池2丁目1-35の一部他</td><td class="xl26" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; border-top-color: windowtext; border-left-color: windowtext; border-right: windowtext 0.5pt solid" x:num="">80</td><td class="xl24" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; border-top-color: windowtext; border-left-color: windowtext; border-right: windowtext 0.5pt solid">創設</td></tr><tr height="19" style="height: 14.25pt"><td class="xl25" height="19" style="border-bottom: windowtext 0.5pt solid; border-left: windowtext 0.5pt solid; background-color: transparent; border-top-color: windowtext; height: 14.25pt; border-right: windowtext 0.5pt solid">社会福祉法人きらくえん</td><td class="xl25" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; border-top-color: windowtext; border-left-color: windowtext; border-right: windowtext 0.5pt solid">須磨区車字菅ノ池1351番14</td><td class="xl26" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; border-top-color: windowtext; border-left-color: windowtext; border-right: windowtext 0.5pt solid" x:num="">29</td><td class="xl24" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; border-top-color: windowtext; border-left-color: windowtext; border-right: windowtext 0.5pt solid">創設</td></tr></tbody></table><br />
-  
-    <h4 id="midashi40573">2.介護老人保健施設</h4>
-<table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" width="100%" x:str=""><colgroup><col style="width: 134pt; mso-width-source: userset; mso-width-alt: 5696" width="178" /><col style="width: 161pt; mso-width-source: userset; mso-width-alt: 6848" width="214" /><col span="2" style="width: 45pt; mso-width-source: userset; mso-width-alt: 1920" width="60" /></colgroup><tbody><tr height="19" style="height: 14.25pt"><td class="xl24" height="19" style="border-bottom: windowtext 0.5pt solid; border-left: windowtext 0.5pt solid; background-color: transparent; width: 134pt; height: 14.25pt; border-top: windowtext 0.5pt solid; border-right: windowtext 0.5pt solid" width="178">事業者</td><td class="xl24" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; width: 161pt; border-left-color: windowtext; border-top: windowtext 0.5pt solid; border-right: windowtext 0.5pt solid" width="214">整備場所</td><td class="xl24" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; width: 45pt; border-left-color: windowtext; border-top: windowtext 0.5pt solid; border-right: windowtext 0.5pt solid" width="60">入所定員</td><td class="xl24" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; width: 45pt; border-left-color: windowtext; border-top: windowtext 0.5pt solid; border-right: windowtext 0.5pt solid" width="60">整備区分</td></tr><tr height="19" style="height: 14.25pt"><td class="xl25" height="19" style="border-bottom: windowtext 0.5pt solid; border-left: windowtext 0.5pt solid; background-color: transparent; border-top-color: windowtext; height: 14.25pt; border-right: windowtext 0.5pt solid">医療法人社団一功会</td><td class="xl27" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; border-top-color: windowtext; border-left-color: windowtext; border-right: windowtext 0.5pt solid">長田区林山町4番22他</td><td class="xl26" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; border-top-color: windowtext; border-left-color: windowtext; border-right: windowtext 0.5pt solid" x:num="">100</td><td class="xl24" style="border-bottom: windowtext 0.5pt solid; background-color: transparent; border-top-color: windowtext; border-left-color: windowtext; border-right: windowtext 0.5pt solid">創設</td></tr></tbody></table>
-  
-    <h2 id="midashi52187">応募総数</h2>
-<br /><table border="1" cellpadding="1" cellspacing="1" width="100%"><tbody><tr><td>1.</td><td>特別養護老人ホーム</td><td>8事業</td></tr><tr><td>2.</td><td>介護老人保健施設</td><td>5事業</td></tr><tr><td>3.</td><td>介護型ケアハウス</td><td>2事業</td></tr><tr><td>4.</td><td>小規模多機能型居宅介護拠点</td><br /><td>1事業</td></tr></tbody></table>
-  
+        <p>一般社団法人日本ユニットケア推進センターが実施するユニットケア研修（ユニットケア施設管理者研修、ユニットリーダー研修）の受講申込に係る情報を掲載しています。<br /><br />申込対象施設は、ユニット型特別養護老人ホーム（準ユニット型を含む）、ユニット型介護老人保健施設です。<br /><br />受講を希望される施設は、下記をご確認いただき、日本ユニットケア推進センターオンライン受講申込システムから施設ごとに直接申し込んでください。</p>
+    <h2 id="midashi26482">申込受付中の研修</h2><p>2018年度前期 ユニットケア研修<br />　・ユニットケア施設管理者研修<br />　・ユニットリーダー研修</p>
+    <h2 id="midashi21489">申込期間</h2><p>平成30年2月1日（木曜）～2月28日（水曜）</p>
+    <h2 id="midashi75465">募集要項等</h2><ul class="link-list">
 
+            <li class="doc-pdf">
+              <a href="/life/support/carenet/shisetsu/img/uc_h30-1_yoko.pdf">募集要項（PDF形式：585KB）</a>
+              </li>
+            <li class="doc-pdf">
+              <a href="/life/support/carenet/shisetsu/img/uc_h30-1_oshirase.pdf">受講のお知らせ（PDF形式：228KB）</a>
+              </li>
+            <li class="doc-pdf">
+              <a href="/life/support/carenet/shisetsu/img/uc_h30-1_tebiki.pdf">受講の手引き（PDF形式：1,488KB）</a>
+              </li>
+    </ul>
+    <h2 id="midashi89487">受講申込</h2><p>日本ユニットケア推進センターのホームページを参照してください。</p><ul class="link-list">
+
+            <li class="doc-other">
+              <a href="http://www.unit-care.or.jp/"
+                 rel="external">日本ユニットケア推進センター（外部リンク）</a>
+              </li>
+    </ul>
+    <h2 id="midashi59446">募集要項番号</h2><p>３００１０９</p>
+    <h2 id="midashi73836">留意事項</h2><p>１．受講者の決定は、当市の推薦を参考に、日本ユニットケア推進センターが決定いたします。<br />２．確実に受講できる方の申込みを行うようにしてください。<br />３．受講料は、各施設負担です。<br />４．募集要項の熟読をお願いいたします。（受講者変更・受講辞退等の手続き方法も掲載されておりますのでご覧ください。）<br /></p>
+
+<div class="getPdf">
+<p>一部のファイルをPDF形式で提供しています。PDFの閲覧にはAdobe System社の無償のソフトウェア「Adobe Reader」または「Adobe Acrobat Reader」 が必要です。下記のAdobe Readerダウンロードページなどから入手してください。</p>
+<ul class="link-list">
+<li class="doc-other"><a href="http://get.adobe.com/jp/reader/" title="Adobe Readerダウンロード" rel="external">Adobe Readerダウンロードページ（外部リンク）</a></li>
+</ul>
+</div>
 
 </div><!-- /contents -->
 <hr />
@@ -348,4 +368,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2018/01/18 09:27:01.049 GMT+9 -->
+<!-- Created: 2018/02/09 13:08:47.808 GMT+9 -->
