--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/28kaigohoken_senkoukekka.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/28kaigohoken_senkoukekka.html
@@ -279,6 +279,7 @@
             <li><a href="/life/support/carenet/kaigoyobou_panda/index.html">介護予防ぱんだの部屋</a></li>
             <li><a href="/life/support/carenet/koureishagyakutai_boushi/index.html">高齢者虐待防止</a></li>
             <li><a href="/life/support/carenet/koureisha_chiikimimamori/index.html">高齢者の地域見守り</a></li>
+            <li><a href="/life/support/carenet/jinzai/index.html">介護人材関連情報</a></li>
             <li><a href="/life/support/carenet/other/index.html">その他のお役立ち情報</a></li>
             <li><a href="/life/support/carenet/nintei_guide/index.html">要介護・要支援 認定申請ガイド</a></li>
             <li><a href="/life/support/carenet/caremanagement/index.html">介護予防ケアマネジメントガイド</a></li>
@@ -357,4 +358,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2016/02/03 13:16:05.693 GMT+9 -->
+<!-- Created: 2018/01/18 09:15:37.083 GMT+9 -->
