--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2912jigyoushaboshu.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2912jigyoushaboshu.html
@@ -240,7 +240,7 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年12月27日</dd></dl><p>平成29年度第2回介護保険施設等整備事業者募集（再募集）を次の通り実施します。</p>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2018年1月23日</dd></dl><p>平成29年度第2回介護保険施設等整備事業者募集（再募集）を次の通り実施します。<br />（募集の受付期間は終了しました。）</p>
     <h2 id="midashi61632">平成29年度第2回介護保険施設等整備事業者募集（再募集）</h2>
     <h3 id="midashi69601">募集要項はこちら</h3><ul class="link-list">
 
@@ -294,6 +294,7 @@
             <li><a href="/life/support/carenet/kaigoyobou_panda/index.html">介護予防ぱんだの部屋</a></li>
             <li><a href="/life/support/carenet/koureishagyakutai_boushi/index.html">高齢者虐待防止</a></li>
             <li><a href="/life/support/carenet/koureisha_chiikimimamori/index.html">高齢者の地域見守り</a></li>
+            <li><a href="/life/support/carenet/jinzai/index.html">介護人材関連情報</a></li>
             <li><a href="/life/support/carenet/other/index.html">その他のお役立ち情報</a></li>
             <li><a href="/life/support/carenet/nintei_guide/index.html">要介護・要支援 認定申請ガイド</a></li>
             <li><a href="/life/support/carenet/caremanagement/index.html">介護予防ケアマネジメントガイド</a></li>
@@ -372,4 +373,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/12/27 10:38:22.207 GMT+9 -->
+<!-- Created: 2018/02/01 14:24:11.314 GMT+9 -->
