--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/h28_2nd_kaigohoken_senkoukekka.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/h28_2nd_kaigohoken_senkoukekka.html
@@ -278,6 +278,7 @@
             <li><a href="/life/support/carenet/kaigoyobou_panda/index.html">介護予防ぱんだの部屋</a></li>
             <li><a href="/life/support/carenet/koureishagyakutai_boushi/index.html">高齢者虐待防止</a></li>
             <li><a href="/life/support/carenet/koureisha_chiikimimamori/index.html">高齢者の地域見守り</a></li>
+            <li><a href="/life/support/carenet/jinzai/index.html">介護人材関連情報</a></li>
             <li><a href="/life/support/carenet/other/index.html">その他のお役立ち情報</a></li>
             <li><a href="/life/support/carenet/nintei_guide/index.html">要介護・要支援 認定申請ガイド</a></li>
             <li><a href="/life/support/carenet/caremanagement/index.html">介護予防ケアマネジメントガイド</a></li>
@@ -356,4 +357,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/03/31 11:11:48.253 GMT+9 -->
+<!-- Created: 2018/01/18 09:24:24.254 GMT+9 -->
