--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/teikijunkai.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/teikijunkai.html
@@ -245,7 +245,7 @@
     <ul class="link-list">
 
             <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/img/jigyosyo_teikijunkai.pdf">定期巡回・随時対応型訪問介護看護事業所一覧（PDF形式：100KB）</a>
+              <a href="/life/support/carenet/shisetsu/img/jigyosyo_teikijunkai.pdf">定期巡回・随時対応型訪問介護看護事業所一覧（PDF形式：101KB）</a>
               </li>
     </ul>
 
@@ -273,6 +273,7 @@
             <li><a href="/life/support/carenet/kaigoyobou_panda/index.html">介護予防ぱんだの部屋</a></li>
             <li><a href="/life/support/carenet/koureishagyakutai_boushi/index.html">高齢者虐待防止</a></li>
             <li><a href="/life/support/carenet/koureisha_chiikimimamori/index.html">高齢者の地域見守り</a></li>
+            <li><a href="/life/support/carenet/jinzai/index.html">介護人材関連情報</a></li>
             <li><a href="/life/support/carenet/other/index.html">その他のお役立ち情報</a></li>
             <li><a href="/life/support/carenet/nintei_guide/index.html">要介護・要支援 認定申請ガイド</a></li>
             <li><a href="/life/support/carenet/caremanagement/index.html">介護予防ケアマネジメントガイド</a></li>
@@ -351,4 +352,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2016/05/20 17:24:54.625 GMT+9 -->
+<!-- Created: 2018/01/18 09:26:55.445 GMT+9 -->
