--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/tokuyo.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/tokuyo.html
@@ -293,6 +293,7 @@
             <li><a href="/life/support/carenet/kaigoyobou_panda/index.html">介護予防ぱんだの部屋</a></li>
             <li><a href="/life/support/carenet/koureishagyakutai_boushi/index.html">高齢者虐待防止</a></li>
             <li><a href="/life/support/carenet/koureisha_chiikimimamori/index.html">高齢者の地域見守り</a></li>
+            <li><a href="/life/support/carenet/jinzai/index.html">介護人材関連情報</a></li>
             <li><a href="/life/support/carenet/other/index.html">その他のお役立ち情報</a></li>
             <li><a href="/life/support/carenet/nintei_guide/index.html">要介護・要支援 認定申請ガイド</a></li>
             <li><a href="/life/support/carenet/caremanagement/index.html">介護予防ケアマネジメントガイド</a></li>
@@ -371,4 +372,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/10/04 09:42:36.343 GMT+9 -->
+<!-- Created: 2018/01/18 09:26:41.476 GMT+9 -->
